[B]Version 0.0.7[/B]
- convert all unique ID keys to lowercase
- import critic rating as tomatometerallcritics
- import local or remote trailer
- fix exceptions / crashes when playing non-imported videos

[B]Version 0.0.6[/B]
- fix playback stopped / ended callback handling
- fix reporting of playback resume point when playback stopped 
- process UNC / DVD / Blu-Ray paths before passing them to Kodi
- improve mapping of studios, overviews, MPAA and video / audio streams
- redact HTTP request bodies that might contain a password
- download the server's icon to avoid unsupported HTTP HEAD requests
- support displaying server messages as notifications
- reduce authentication requests

[B]Version 0.0.5[/B]
- make Direct Play configurable
- Fix crash in emby.player.Player callbacks
- automatically add external subtitles when starting playback of a video
- make external subtitles configurable
- make importing collections / movie sets configurable (enabled by default)
- support secure websocket connections
- improve websocket connections to remote Emby servers

[B]Version 0.0.4[/B]
- Fix importing logo / clearlogo artwork
- Import additional artwork (clearart, banner, landscape, discart)
- Fix reporting playback progress to the Emby server
- Import boxsets / collections / sets along with movies

[B]Version 0.0.3[/B]
- Support DirectPlay for files which are directly accessible over Kodi's VFS

[B]Version 0.0.2[/B]
- Support for Python 2 and 3

[B]Version 0.0.1[/B]
- Initial version