@@ -41,6 +41,7 @@ URL_AUTHENTICATE_BY_NAME = 'AuthenticateByName'
 URL_SYSTEM = 'System'
 URL_SYSTEM_INFO = 'Info'
 URL_SYSTEM_INFO_PUBLIC = 'Public'
+URL_PLUGINS = 'Plugins'
 
 URL_QUERY_API_KEY = 'api_key'
 URL_QUERY_DEVICE_ID = 'deviceId'
@@ -51,6 +52,7 @@ URL_QUERY_ITEMS_EXCLUDE_LOCATION_TYPES = 'ExcludeLocationTypes'
 URL_QUERY_ITEMS_LIMIT = 'Limit'
 URL_QUERY_ITEMS_START_INDEX = 'StartIndex'
 URL_QUERY_ITEMS_INCLUDE_ITEM_TYPES = 'IncludeItemTypes'
+URL_QUERY_ITEMS_MIN_DATE_LAST_SAVED_FOR_USER = 'MinDateLastSavedForUser'
 URL_QUERY_ITEMS_PARENT_ID = 'ParentId'
 
 URL_PLAYBACK_MEDIA_TYPE_VIDEO = 'Videos'
@@ -197,6 +199,8 @@ SETTING_PROVIDER_PASSWORD = 'emby.password'
 SETTING_PROVIDER_TEST_AUTHENTICATION = 'emby.testauthentication'
 SETTING_PROVIDER_TOKEN = 'emby.token'
 SETTING_PROVIDER_DEVICEID = 'emby.deviceid'
+
+SETTING_PROVIDER_SYNCHRONIZATION_USE_KODI_COMPANION = 'emby.usekodicompanion'
 
 SETTING_PROVIDER_PLAYBACK_ALLOW_DIRECT_PLAY = 'emby.allowdirectplay'
 SETTING_PROVIDER_PLAYBACK_ENABLE_EXTERNAL_SUBTITLES = 'emby.enableexternalsubtitles'
